--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <link rel="stylesheet" href="./style.css">
 
-    <title>Novo Usuario - Sujeito Progamador</title>
+    <title>Novo Usuario</title>
 </head>
 <body>
 
@@ -19,7 +19,7 @@
         <h2>Nova conta</h2> 
         </section>
 
- <!-- <form id="form" class="form"> -->
+ <form id="form" class="form">
     <div class="form-content">
         <label for="username">Nome do Usuario</label>
         <input
@@ -30,8 +30,6 @@
 <a> Aqui vai a mensagem de erro....</a>
 
     </div>
-
-   <!-- <form id="form" class="form"> -->
         <div class="form-content">
             <label for="email">Email</label>
             <input 
@@ -42,8 +40,6 @@
     
     <a> Aqui vai a mensagem de erro....</a>
         </div>
-
-    <!-- <form id="form" class="form"> -->
             <div class="form-content">
                 <label for="password">Senha</label>
                 <input 
