--- a/index.html
+++ b/index.html
@@ -36,14 +36,22 @@
             </div>
             <div class="form-content">
                 <label for="password">Senha</label>
-                <input type="password" id="password-" placeholder="Digite a sua Senha..." />
+                <input
+                type="password" 
+                id="password"
+                placeholder="Digite a sua Senha..."
+                 />
                 <a> Aqui vai a mensagem de erro....</a>
 
             </div>
 
             <div class="form-content">
                 <label for="password-confirmation">Confirmação de Senha</label>
-                <input type="password" id="password-confirmation" placeholder="Digite a sua Senha..." />
+                <input 
+                type="password" 
+                id="password-confirmation" 
+                placeholder="Digite a sua Senha..." 
+                />
                 <a> Aqui vai a mensagem de erro....</a>
 
             </div>
